# challenge_consultor_tech4h

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.specs/features/banking-assistant/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md
data/: clientes.csv  score_limite.csv
evals/: __init__.py  run_intent_eval.py
evals/datasets/: intent_cases.jsonl
src/: __init__.py  conversation.py  exchange_subgraph.py  graph.py  llm.py  observability.py  schemas.py  state.py
src/tools/: __init__.py  auth.py  credit.py  exchange.py  scoring.py
tests/: test_auth.py  test_conversation.py  test_credit.py  test_evals.py  test_exchange.py  test_exchange_subgraph.py  test_graph.py  test_graph_integration.py  test_llm.py  test_observability.py  test_scoring.py
