[project]
name = "desafio-agentes-ia-banco-agil"
version = "0.1.0"
description = "Desafio tecnico de agentes de IA para atendimento bancario com LangGraph, OpenRouter/DeepSeek, Tavily e LangSmith."
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "langsmith",
    "pydantic",
    "python-dotenv",
    "streamlit",
    "tavily-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
